--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@
   --bs-dark: #212529;
   --bs-primary-action: #16a085;
   --bs-primary-border-rgb: 21, 150, 125;
-  --bs-primary-rgb: 167, 148, 100;
+  --bs-primary-rgb: 21, 134, 87;
   /* --bs-primary-rgb: 26, 188, 156; */
   --bs-secondary-rgb: 44, 62, 80;
   --bs-success-rgb: 25, 135, 84;
@@ -11307,6 +11307,7 @@ body {
 
 .page-section {
   padding: 8rem 0;
+  background-color: #f3f4f5;
 }
 
 .text-white-75 {
@@ -11336,16 +11337,16 @@ hr.divider-light {
 
 #mainNav {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  background-color: #755330;
+  background-color: #fff;
   transition: background-color 0.2s ease;
 }
 #mainNav .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
-  color: #fff;
+  color: rgb(var(--bs-primary-rgb));
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: #d1d1d1;
+  color: #000;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   font-size: 0.9rem;
@@ -11355,7 +11356,7 @@ hr.divider-light {
   color: rgb(var(--bs-primary-rgb));
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: rgb(var(--bs-dark-rgb)) !important;
+  color: rgb(var(--bs-primary-rgb)) !important;
 }
 @media (min-width: 992px) {
   #mainNav {
@@ -11380,16 +11381,16 @@ hr.divider-light {
   }
   #mainNav.navbar-shrink {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #755330;
+    background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #fff;
+    color: #000;
   }
   #mainNav.navbar-shrink .navbar-brand:hover {
     color: rgb(var(--bs-primary-rgb));
   }
   #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
-    color: #fff;
+    color: #000;
   }
   #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
     color: rgb(var(--bs-primary-rgb));
@@ -11500,8 +11501,8 @@ header.masthead .description {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 15em;
-  border-radius: 10px;
+  height: 20em;
+  border-radius: 5px;
   margin: auto;
 }
 .img-me{
@@ -11516,7 +11517,7 @@ header.masthead .description {
   margin: auto;
 }
 .icon-trabalho {
-  background-image: url("../assets/img/icons/trabalho.png");
+  background-image: url("../assets/img/icons/trabalho_.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11526,7 +11527,7 @@ header.masthead .description {
   margin: auto;
 }
 .icon-civil {
-  background-image: url("../assets/img/icons/civil.png");
+  background-image: url("../assets/img/icons/civil_.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11536,7 +11537,7 @@ header.masthead .description {
   margin: auto;
 }
 .icon-empresarial {
-  background-image: url("../assets/img/icons/empresarial.png");
+  background-image: url("../assets/img/icons/empresarial_.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11546,7 +11547,7 @@ header.masthead .description {
   margin: auto;
 }
 .icon-familia {
-  background-image: url("../assets/img/icons/familia.png");
+  background-image: url("../assets/img/icons/familia_.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11565,7 +11566,7 @@ header.masthead .description {
   color: rgb(var(--bs-primary-rgb));
 }
 
-.whatsapp-float {
+.whatsapp-float, .whatsapp-float:hover{
   position:fixed;
   width:60px;
   height:60px;
@@ -11578,4 +11579,9 @@ header.masthead .description {
   font-size:30px;
   box-shadow: 1px 1px 2px #888;
   z-index:1000 
+}
+
+.contact-link, .contact-link:hover{
+  text-decoration: none;
+  color: #000;
 }
