--- a/css/styles.css
+++ b/css/styles.css
@@ -11480,7 +11480,7 @@ header.masthead .description {
 }
 
 .img-office{
-  background-image: url("../assets/img/office.jpg");
+  background-image: url("../assets/img/w2b.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
